// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventAction:ajax 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              发送请求
            </span>
          </button>
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              18岁的天空
            </span>
          </span>
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              发送请求2
            </span>
          </button>
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              18岁的天空，status:0，msg:ok
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:ajax args 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              发送请求
            </span>
          </button>
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              18岁的天空
            </span>
          </span>
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              发送请求2
            </span>
          </button>
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              18岁的天空，status:0，msg:ok
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:ajax sendOn 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              发送请求
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
